--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+src/.idea/discord.xml
+src/.idea/misc.xml
+src/.idea/modules.xml
+src/.idea/runConfigurations.xml
+src/.idea/vcs.xml
+src/GitHub.iml
